change item to gear /fix spacing

--- a/Munchkins Game/styles.css
+++ b/Munchkins Game/styles.css
@@ -13,6 +13,9 @@
   padding: 10px;
   margin-bottom: 10px;
 }
+/* .game-mode-container {
+  width: 5rem;
+} */
 @media (max-width: 425px) {
     .mobile-flex {
         flex-direction: column;
